// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Funciones de test que prueban el componente GifGrid Debe de mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Spiderman
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="1"
      key="1"
      title="Cualquier cosa"
      url="http://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Funciones de test que prueban el componente GifGrid El componente debe haber sido renderizado correctamente. 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Spiderman
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
